--- a/Assignments/Assignment_1.ipynb
+++ b/Assignments/Assignment_1.ipynb
@@ -122,6 +122,37 @@
     "    \n",
     "    4. Variables are case sensitive  "
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "9. What three functions can be used to get the integer, floating-point number, or string\n",
+    "version of a value?\n",
+    "\n",
+    "-->\n",
+    "    - str(), int(), float() are the three inbuilt functions which can be used for converting a type of a value, This process is typically known as Type casting."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "10. Why does this expression cause an error? How can you fix it?\n",
+    "'I have eaten' + 99 + 'burritos'\n",
+    "\n",
+    "    - This expression causes error because the user is trying to join a string type value with a int type value which causes a type error.\n",
+    "    - To solve this error wrap the int value in str() function. This would solve the problem. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
